--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\f_fig\\AppData\\Roaming\\NetBeans\\11.3\\config\\GlassFishEE6\\Properties\\gfv3-793787952.properties
+deploy.ant.properties.file=C:\\Users\\samuel\\AppData\\Roaming\\NetBeans\\11.3\\config\\GlassFishEE6\\Properties\\gfv31012084050.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/f_fig/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/f_fig/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\f_fig\\GlassFish_Server\\glassfish;C:\\Users\\f_fig\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/f_fig/GlassFish_Server
-user.properties.file=C:\\Users\\f_fig\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
+j2ee.server.domain=C:/Users/samuel/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/samuel/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\samuel\\GlassFish_Server\\glassfish;C:\\Users\\samuel\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
+j2ee.server.middleware=C:/Users/samuel/GlassFish_Server
+user.properties.file=C:\\Users\\samuel\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
